--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -105,7 +105,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="build/web/gwj-40.html"
+export_path="build/web/index.html"
 script_export_mode=1
 script_encryption_key=""
 
